@@ -52,7 +52,12 @@ public class ColorProperty extends AEditableProperty
 	{
 		return m_color;
 	}
-	
+
+	public void setValue(Object value) throws ClassCastException
+	{
+	 	m_color = (Color) value;
+	}
+
 	public JComponent getEditorComponent()
 	{
 		@SuppressWarnings("serial")
